--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   <div class="part" id="hot" data-title="影视音乐"><h2 class="has_link "><strong>影视音乐</strong></h2><div class="items "><div class="row"><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.youku.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.youku.com" alt="优酷">
+  <img src="https://img.alicdn.com/tfs/TB1WeJ9Xrj1gK0jSZFuXXcrHpXa-195-195.png" alt="优酷">
   <h3>优酷</h3>
   <p>提供视频播放,视频发布,视频搜索,视频分享</p>
   </a>
@@ -180,7 +180,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://v.qq.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://v.qq.com" alt="腾讯视频">
+  <img src="https://v.qq.com/favicon.ico" alt="腾讯视频">
   <h3>腾讯视频</h3>
   <p>中国领先的在线视频媒体平台</p>
   </a>
@@ -188,7 +188,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.mgtv.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.mgtv.com" alt="芒果TV">
+  <img src="https://www.mgtv.com/favicon.ico" alt="芒果TV">
   <h3>芒果TV</h3>
   <p>热门综艺最新电影电视剧在线观看</p>
   </a>
@@ -196,7 +196,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.iqiyi.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.iqiyi.com" alt="爱奇艺">
+  <img src="https://www.iqiyipic.com/common/images/PCW-72X72.png" alt="爱奇艺">
   <h3>爱奇艺</h3>
   <p>高品质的在线视频播放平台</p>
   </a>
@@ -204,7 +204,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://tv.sohu.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://tv.sohu.com" alt="搜狐视频">
+  <img src="https://css.tv.itc.cn/channel/v1/images/logo.png" alt="搜狐视频">
   <h3>搜狐视频</h3>
   <p>搜狐旗下专业的综合视频网站</p>
   </a>
@@ -212,7 +212,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://v.bingdou.xyz" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://v.bingdou.xyz" alt="冰豆影院">
+  <img src="https://v.bingdou.xyz/favicon.ico" alt="冰豆影院">
   <h3>冰豆影院</h3>
   <p>一款全能影视搜索引擎</p>
   </a>
@@ -220,7 +220,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.bilibili.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.bilibili.com" alt="哔哩哔哩">
+  <img src="https://www.bilibili.com/favicon.ico" alt="哔哩哔哩">
   <h3>哔哩哔哩</h3>
   <p>国内知名的动漫新番视频弹幕网站</p>
   </a>
@@ -228,7 +228,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.xinpianchang.com/channel/index/sort-like" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.xinpianchang.com/channel/index/sort-like" alt="新片场">
+  <img src="https://www.xinpianchang.com/new_favicon/favicon-32x32.png" alt="新片场">
   <h3>新片场</h3>
   <p>汇聚全球原创优质视频及创作人</p>
   </a>
@@ -236,7 +236,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.1905.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.1905.com" alt="电影网">
+  <img src="https://static.m1905.cn/114x114.png" alt="电影网">
   <h3>电影网</h3>
   <p>高清电影在线观看及海量最新电影图文视频资讯</p>
   </a>
@@ -252,7 +252,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.zhaogepu.com" target="_blank">
-  <img src="http://www.aigepu.com/favicon.ico" alt="找歌谱网">
+  <img src="https://bpic.588ku.com/element_origin_min_pic%2F17%2F06%2F04%2F0a207bd28020a018e39c620821aaf864.jpg" alt="找歌谱网">
   <h3>找歌谱网</h3>
   <p>专业歌谱搜索引擎</p>
   </a>
@@ -260,7 +260,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.autopiano.cn" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.autopiano.cn" alt="自由钢琴">
+  <img src="https://www.autopiano.cn/favicon.ico" alt="自由钢琴">
   <h3>自由钢琴</h3>
   <p>在学习工作之余可以在线弹钢琴</p>
   </a>
@@ -268,7 +268,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://y.qq.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://y.qq.com" alt="QQ音乐">
+  <img src="https://y.qq.com/favicon.ico" alt="QQ音乐">
   <h3>QQ音乐</h3>
   <p>千万正版音乐海量无损曲库新歌热歌天天畅听的高品质音乐平台</p>
   </a>
@@ -292,7 +292,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.xiami.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.xiami.com" alt="虾米音乐">
+  <img src="https://fm.douban.com/favicon.ico" alt="虾米音乐">
   <h3>虾米音乐</h3>
   <p>专业音乐内容发现平台</p>
   </a>
@@ -300,7 +300,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.djye.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.djye.com" alt="DJ嗨吧">
+  <img src="http://www.djye.com/favicon.ico" alt="DJ嗨吧">
   <h3>DJ嗨吧</h3>
   <p>提供国内外DJ舞曲,好听的DJ音乐</p>
   </a>
@@ -308,7 +308,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.htqyy.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.htqyy.com" alt="好听轻音乐网">
+  <img src="http://www.htqyy.com/favicon.ico" alt="好听轻音乐网">
   <h3>好听轻音乐网</h3>
   <p>中国最好的轻音乐交流平台</p>
   </a>
@@ -317,7 +317,7 @@
   <div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.xuexi.cn" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.xuexi.cn" alt="学习强国">
+  <img src="https://www.xuexi.cn/favicon.ico" alt="学习强国">
   <h3>学习强国</h3>
   <p>立足全体党员、面向全社会的优质学习平台</p>
   </a>
@@ -325,7 +325,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.xinhuanet.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.xinhuanet.com" alt="新华网">
+  <img src="http://www.xinhuanet.com/favicon.ico" alt="新华网">
   <h3>新华网</h3>
   <p>权威、准确、及时播发国内外重要新闻和重大突发事件</p>
   </a>
@@ -333,7 +333,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.people.cn" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.people.cn" alt="人民网">
+  <img src="http://www.people.cn/favicon.ico" alt="人民网">
   <h3>人民网</h3>
   <p>以新闻为主的大型网上信息发布平台</p>
   </a>
@@ -341,7 +341,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.ifeng.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.ifeng.com" alt="凤凰网">
+  <img src="https://www.ifeng.com/favicon.ico" alt="凤凰网">
   <h3>凤凰网</h3>
   <p>全方位综合新闻资讯、深度访谈、观点评论、财经产品、互动应用、分享社区等服务</p>
   </a>
@@ -357,7 +357,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.ceconline.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.ceconline.com" alt="世界经理人">
+  <img src="http://www.ceconline.com/favicon.ico" alt="世界经理人">
   <h3>世界经理人</h3>
   <p>在这里,你可以找到切合中国实际的管理思想和经验</p>
   </a>
@@ -365,7 +365,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.cankaoxiaoxi.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.cankaoxiaoxi.com" alt="参考消息">
+  <img src="http://www.cankaoxiaoxi.com/favicon.ico" alt="参考消息">
   <h3>参考消息</h3>
   <p>外媒,军事,国际新闻,最新消息,全球新闻,环球资讯</p>
   </a>
@@ -381,7 +381,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.huanqiu.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.huanqiu.com" alt="环球网">
+  <img src="https://www.huanqiu.com/favicon.ico" alt="环球网">
   <h3>环球网</h3>
   <p>为全球化时代的中国互联网用户提供与国际生活相关的资讯服务、互动社区</p>
   </a>
@@ -389,7 +389,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.tiexue.net" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.tiexue.net" alt="铁血网">
+  <img src="https://www.tiexue.net/favicon.ico" alt="铁血网">
   <h3>铁血网</h3>
   <p>中国军事,军事新闻,世界军事,国际军事,军事报道,军事小说</p>
   </a>
@@ -397,7 +397,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://news.baidu.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://news.baidu.com" alt="百度新闻">
+  <img src="https://news.baidu.com/favicon.ico" alt="百度新闻">
   <h3>百度新闻</h3>
   <p>海量资讯的新闻服务平台</p>
   </a>
@@ -405,7 +405,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://tv.cctv.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://tv.cctv.com" alt="央视网">
+  <img src="https://tv.cctv.com/favicon.ico" alt="央视网">
   <h3>央视网</h3>
   <p>中央电视台电视节目官方呈现平台</p>
   </a>
@@ -413,7 +413,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://tophub.today" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://tophub.today" alt="今日热榜">
+  <img src="https://tophub.today/favicon.ico" alt="今日热榜">
   <h3>今日热榜</h3>
   <p>提供各站热榜聚合</p>
   </a>
@@ -421,7 +421,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.toutiao.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.toutiao.com" alt="今日头条">
+  <img src="https://www.toutiao.com/favicon.ico" alt="今日头条">
   <h3>今日头条</h3>
   <p>一款基于数据挖掘的推荐引擎产品</p>
   </a>
@@ -429,7 +429,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.meihua.info" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.meihua.info" alt="梅花网">
+  <img src="https://www.meihua.info/favicon.ico" alt="梅花网">
   <h3>梅花网</h3>
   <p>国内收录数量最大、信息价值点最丰富的营销作品宝库</p>
   </a>
@@ -445,7 +445,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://36kr.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://36kr.com" alt="36氪">
+  <img src="https://36kr.com/favicon.ico" alt="36氪">
   <h3>36氪</h3>
   <p>独家的视角为用户深度剖析最前沿的资讯</p>
   </a>
@@ -453,7 +453,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.qdaily.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.qdaily.com" alt="好奇心日报">
+  <img src="http://www.qdaily.com/favicon.ico" alt="好奇心日报">
   <h3>好奇心日报</h3>
   <p>以商业视角观察生活并启发你的好奇心</p>
   </a>
