--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.qdaily.com" target="_blank">
-  <img src="http://www.qdaily.com/favicon.ico" alt="好奇心日报">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/qdaily.ico" alt="好奇心日报">
   <h3>好奇心日报</h3>
   <p>以商业视角观察生活并启发你的好奇心</p>
   </a>
