--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.tianya.cn" target="_blank">
-  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="天涯社区">
+  <img src="https://www.tianya.cn/favicon.ico" alt="天涯社区">
   <h3>天涯社区</h3>
   <p>提供论坛、部落、博客、问答、文学、相册、个人空间等服务</p>
   </a>
@@ -889,7 +889,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.douban.com" target="_blank">
-  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="豆瓣">
+  <img src="https://www.douban.com/favicon.ico" alt="豆瓣">
   <h3>豆瓣</h3>
   <p>提供图书、电影、音乐唱片的推荐、评论和价格比较，以及城市独特的文化生活</p>
   </a>
@@ -985,7 +985,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.fliggy.com" target="_blank">
-  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="飞猪旅行">
+  <img src="https://g.alicdn.com/trip/tools/img/favicon.ico" alt="飞猪旅行">
   <h3>飞猪旅行</h3>
   <p>阿里巴巴旗下的综合性旅游出行服务平台</p>
   </a>
