--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.iqiyi.com" target="_blank">
-  <img src="https://www.iqiyipic.com/common/images/PCW-72X72.png" alt="爱奇艺">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/iqiyi.png" alt="爱奇艺">
   <h3>爱奇艺</h3>
   <p>高品质的在线视频播放平台</p>
   </a>
@@ -284,7 +284,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://douban.fm" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://douban.fm" alt="豆瓣FM">
+  <img src="https://img3.doubanio.com/favicon.ico" alt="豆瓣FM">
   <h3>豆瓣FM</h3>
   <p>一款由豆瓣开发的个性化的音乐收听工具</p>
   </a>
