--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <input type="text" name="query" class="s" value="" placeholder="搜微信公众号文章">
             <button type="submit" name="" class="btn">微信搜索</button>
           </form>
-          <form class="search hidden" id="shop-search" action="https://tao.qianqi.net/index.php" method="get" target="_blank">
+          <form class="search hidden" id="shop-search" action="https://tao.bingdou.net/index.php" method="get" target="_blank">
             <input type="hidden" name="r" value="l">
 			<input type="text" name="kw" class="s" value="" placeholder="搜天猫优惠券">
             <button type="submit" name="" class="btn">购物搜索</button>
@@ -84,7 +84,7 @@
     </div>
     <div class="bar-right ">
       <span>特别推荐：</span>
-      <a href="https://tao.qianqi.net/" target="_blank"><i><img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/tmall.png" alt="天猫优惠券"></i>天猫优惠券</a>
+      <a href="https://tao.bingdou.net/" target="_blank"><i><img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/tmall.png" alt="天猫优惠券"></i>天猫优惠券</a>
       <a href="https://v.huangbin.net/" target="_blank"><i><img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/beauty.png" alt="美女秀场"></i>美女秀场</a>    </div>
   </div>
 </div>
@@ -1259,7 +1259,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.yinfans.me" target="_blank">
-  <img src="http://www.yinfans.me/favicon.ico" alt="音范丝">
+  <img src="https://www.yinfans.me/favicon.ico" alt="音范丝">
   <h3>音范丝</h3>
   <p>一个电影爱好者的资讯分享站</p>
   </a>
