--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://ifish.fun" target="_blank">
-  <img src="https://ifish.fun/favicon.ico" alt="洛奇Town">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="洛奇Town">
   <h3>洛奇Town</h3>
   <p>每天精选一篇美文以及两首纯音乐</p>
   </a>
@@ -1259,7 +1259,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.yinfans.me" target="_blank">
-  <img src="https://www.yinfans.me/favicon.ico" alt="音范丝">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="音范丝">
   <h3>音范丝</h3>
   <p>一个电影爱好者的资讯分享站</p>
   </a>
