--- a/index.html
+++ b/index.html
@@ -607,8 +607,8 @@
   </div></div></div></div><div class="part" id="design" data-title="在线购物"><h2 class=""><strong>在线购物</strong></h2><div class="items "><div class="row">
   <div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="https://api.qianqi.net/go/?url=https://tao.qianqi.net" target="_blank">
-  <img src="https://tao.qianqi.net/favicon.ico">
+  <a href="https://api.qianqi.net/go/?url=https://tao.bingdou.net" target="_blank">
+  <img src="https://tao.bingdou.net/favicon.ico">
   <h3>购物优惠券</h3>
   <p>每天实时更新千款天猫优惠券，纯人工筛选验货，限时限量特卖</p>
   </a>
