--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
             <input type="text" name="query" class="s" value="" placeholder="搜微信公众号文章">
             <button type="submit" name="" class="btn">微信搜索</button>
           </form>
-          <form class="search hidden" id="shop-search" action="https://tao.bingdou.net/index.php" method="get" target="_blank">
+          <form class="search hidden" id="shop-search" action="https://tao.qianqi.net/index.php" method="get" target="_blank">
             <input type="hidden" name="r" value="l">
 			<input type="text" name="kw" class="s" value="" placeholder="搜天猫优惠券">
             <button type="submit" name="" class="btn">购物搜索</button>
           </form>
-		  <form class="search hidden" id="vod-search" action="https://v.bingdou.xyz/so/" method="get" target="_blank">
+		  <form class="search hidden" id="vod-search" action="https://www.nfstar.net/vodsearch/-------------/" method="get" target="_blank">
 			<input type="text" name="wd" class="s" value="" placeholder="搜电影、电视剧、综艺、动漫">
             <button type="submit" name="" class="btn">影视搜索</button>
           </form>
@@ -74,17 +74,16 @@
   <div class="container">
     <div class="bar-left">
       <ul class="">
-        <li><a href="https://tv.bingdou.net/" target="_blank">看电视</a></li>
-		<li><a href="https://v.bingdou.xyz/" target="_blank">看电影</a></li>
+		<li><a href="https://www.nfstar.net/" target="_blank">看电影</a></li>
 		<li><a href="https://music.bingdou.xyz/" target="_blank">听音乐</a></li>
-		<li><a href="https://vod.bingdou.net/" target="_blank">视频云播</a></li>
-		<li><a href="https://so.bingdou.net/" target="_blank">实用搜索</a></li>
-		<li><a href="https://win.bingdou.net/" target="_blank">系统下载</a></li>
+		<li><a href="https://vod.bingdou.xyz/" target="_blank">视频云播</a></li>
+		<li><a href="https://so.bingdou.xyz/" target="_blank">实用搜索</a></li>
+		<li><a href="https://win.bingdou.xyz/" target="_blank">系统下载</a></li>
 	 </ul>
     </div>
     <div class="bar-right ">
       <span>特别推荐：</span>
-      <a href="https://tao.bingdou.net/" target="_blank"><i><img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/tmall.png" alt="天猫优惠券"></i>天猫优惠券</a>
+      <a href="https://tao.qianqi.net/" target="_blank"><i><img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/tmall.png" alt="天猫优惠券"></i>天猫优惠券</a>
       <a href="https://v.huangbin.net/" target="_blank"><i><img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/beauty.png" alt="美女秀场"></i>美女秀场</a>    </div>
   </div>
 </div>
@@ -211,10 +210,10 @@
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="https://api.qianqi.net/go/?url=https://v.bingdou.xyz" target="_blank">
-  <img src="https://v.bingdou.xyz/favicon.ico">
-  <h3>冰豆影院</h3>
-  <p>一款全能影视搜索引擎</p>
+  <a href="https://api.qianqi.net/go/?url=https://www.nfstar.net" target="_blank">
+  <img src="https://pic.imgdb.cn/item/5fe92f013ffa7d37b3269a41.png">
+  <h3>奈飞星影视</h3>
+  <p>有想法的在线影视网站</p>
   </a>
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
@@ -462,10 +461,10 @@
   </div></div></div><div class="part" id="jiaocheng" data-title="在线直播"><h2 class=""><strong>在线直播</strong></h2><div class="items "><div class="row">
   <div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="https://api.qianqi.net/go/?url=https://tv.bingdou.net" target="_blank">
-  <img src="https://tv.bingdou.net/favicon.ico">
-  <h3>冰豆直播</h3>
-  <p>集多家电视直播、影视直播、电台直播和音乐于一身的综合直播网站</p>
+  <a href="https://api.qianqi.net/go/?url=http://tv.haoqu99.com" target="_blank">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png">
+  <h3>好趣网</h3>
+  <p>高清网络电视直播在线观看</p>
   </a>
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
@@ -607,8 +606,8 @@
   </div></div></div></div><div class="part" id="design" data-title="在线购物"><h2 class=""><strong>在线购物</strong></h2><div class="items "><div class="row">
   <div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="https://api.qianqi.net/go/?url=https://tao.bingdou.net" target="_blank">
-  <img src="https://tao.bingdou.net/favicon.ico">
+  <a href="https://api.qianqi.net/go/?url=https://tao.qianqi.net" target="_blank">
+  <img src="https://sr.ffquan.cn/cms_pic/20200111/bocj2eaulrge3c56u0dg0.ico">
   <h3>购物优惠券</h3>
   <p>每天实时更新千款天猫优惠券，纯人工筛选验货，限时限量特卖</p>
   </a>
@@ -1916,9 +1915,9 @@
   <div class="container">
     <p>本网站设计及数据均受版权保护，任何公司及个人不得以任何方式复制，违者将依法追究责任，特此声明。</p>
 	<p>
-      <span><a href="https://www.bingdou.net/about/">关于我们</a></span> <span><a href="https://www.bingdou.net/about/contact.html">联系我们</a></span> <span><a href="https://www.bingdou.net/about/links.html">友情链接</a></span> <span><a href="https://www.bingdou.net/about/map.html">网站地图</a></span>
+      <span><a href="https://www.bingdou.com.cn/about/">关于我们</a></span> <span><a href="https://www.bingdou.com.cn/about/contact.html">联系我们</a></span> <span><a href="https://www.bingdou.com.cn/about/links.html">友情链接</a></span> <span><a href="https://www.bingdou.com.cn/about/map.html">网站地图</a></span>
     </p>
-    <p>Copyright &copy; 2012-<script type="text/javascript">copyright=new Date();update=copyright.getFullYear();document.write(""+ update + "");</script> bingdou.net, All Rights Reserved.</p>
+    <p>Copyright &copy; 2012-<script type="text/javascript">copyright=new Date();update=copyright.getFullYear();document.write(""+ update + "");</script> bingdou.com.cn, All Rights Reserved.</p>
   </div>
   </div>
 <div class="fixed-bar">
