--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="bar-right ">
       <span>特别推荐：</span>
       <a href="https://tao.qianqi.net/" target="_blank"><i><img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/tmall.png" alt="天猫优惠券"></i>天猫优惠券</a>
-      <a href="https://v.huangbin.net/" target="_blank"><i><img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/beauty.png" alt="美女秀场"></i>美女秀场</a>    </div>
+      <a href="https://v.bingdou.wang/" target="_blank"><i><img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/beauty.png" alt="美女秀场"></i>美女秀场</a>    </div>
   </div>
 </div>
 <div class="header-recommend">
@@ -469,7 +469,7 @@
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="https://api.qianqi.net/go/?url=https://v.huangbin.net" target="_blank">
+  <a href="https://api.qianqi.net/go/?url=https://v.bingdou.wang" target="_blank">
   <img src="https://vr0.xiu123.cn/imges/favicon.ico">
   <h3>六间房直播</h3>
   <p>美女主播在线视频唱歌跳舞</p>
