--- a/index.html
+++ b/index.html
@@ -1936,5 +1936,14 @@
 </div>
 <script src="https://lib.baomitu.com/jquery/1.12.4/jquery.js" charset="utf-8"></script>
 <script src="https://cdn.jsdelivr.net/gh/yellowside/3600/js/js.js" charset="utf-8"></script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?11e2091c640bf503826fb401b70d9c68";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </body>
 </html>
