--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   <div class="container">
     <div class="bar-left">
       <ul class="">
+		<li><a href="https://www.3600.win/eat/" target="_blank">今天吃啥呀？</a></li>
 		<li><a href="https://v.bingdou.xyz/" target="_blank">看电影</a></li>
 		<li><a href="https://music.bingdou.xyz/" target="_blank">听音乐</a></li>
 		<li><a href="https://vod.bingdou.xyz/" target="_blank">视频云播</a></li>
