--- a/index.html
+++ b/index.html
@@ -1915,10 +1915,8 @@
 <div class="footer-copyright ">
   <div class="container">
     <p>本网站设计及数据均受版权保护，任何公司及个人不得以任何方式复制，违者将依法追究责任，特此声明。</p>
-	<p>
-      <span><a href="https://www.bingdou.com.cn/about/">关于我们</a></span> <span><a href="https://www.bingdou.com.cn/about/contact.html">联系我们</a></span> <span><a href="https://www.bingdou.com.cn/about/links.html">友情链接</a></span> <span><a href="https://www.bingdou.com.cn/about/map.html">网站地图</a></span>
-    </p>
-    <p>Copyright &copy; 2012-<script type="text/javascript">copyright=new Date();update=copyright.getFullYear();document.write(""+ update + "");</script> bingdou.com.cn, All Rights Reserved.</p>
+	<p><span><a href="https://www.bingdou.com.cn/about/">关于我们</a></span> <span><a href="https://www.bingdou.com.cn/about/contact.html">联系我们</a></span> <span><a href="https://www.bingdou.com.cn/about/links.html">友情链接</a></span> <span><a href="https://www.bingdou.com.cn/about/map.html">网站地图</a></span></p>
+    <p>Copyright &copy; 2012-<script type="text/javascript">copyright=new Date();update=copyright.getFullYear();document.write(""+ update + "");</script> huangbin.net, All Rights Reserved.</p>
   </div>
   </div>
 <div class="fixed-bar">
