--- a/eat/index.html
+++ b/eat/index.html
@@ -20,7 +20,7 @@
 <textarea rows="9" cols="53" id="list" style="display:none">馄饨 拉面 烩面 热干面 刀削面 油泼面 炸酱面 炒面 重庆小面 米线 酸辣粉 土豆粉 螺狮粉 凉皮儿 麻辣烫肉夹馍 羊肉汤 炒饭 盖浇饭 卤肉饭 烤肉饭 黄焖鸡米饭 驴肉火烧 川菜 麻辣香锅 火锅 酸菜鱼 烤串 披萨 烤鸭 汉堡 炸鸡 寿司 蟹黄包 粽子 煎饼果子 生煎 炒年糕 盖浇饭 砂锅 大排档 米线 满汉全席 西餐 麻辣烫 自助餐 炒面 快餐 水果 西北风 馄饨 火锅 烧烤 泡面 速冻水饺 日本料理 涮羊肉 味千拉面 肯德基 面包 扬州炒饭 自助餐 茶餐厅 海底捞 咖啡 比萨 麦当劳 兰州拉面 沙县小吃 烤鱼 海鲜 铁板烧 韩国料理 粥 快餐 东南亚菜 甜点 农家菜 川菜 粤菜 湘菜 本帮菜 竹笋烤肉</textarea>
 <footer>
     <div class="copyright">
-        <p>推荐：<a href="https://www.3600.win/" target="_blank">3600网址导航</a> - <a href="https://tao.qianqi.net/" target="_blank">冰豆精选</a> - <a href="https://v.bingdou.wang/" target="_blank">冰豆秀场</a> - <a href="https://so.bingdou.xyz/" target="_blank">冰豆搜索</a> - <a href="https://vod.bingdou.xyz/" target="_blank">冰豆云播</a> - <a href="https://music.bingdou.xyz/" target="_blank">冰豆音乐</a> - <a href="https://v.bingdou.xyz/" target="_blank">冰豆影院</a></p>
+        <p>推荐：<a href="https://www.3600.win/" target="_blank">导航</a> - <a href="https://tao.qianqi.net/" target="_blank">精选</a> - <a href="https://v.bingdou.wang/" target="_blank">秀场</a> - <a href="https://so.bingdou.xyz/" target="_blank">搜索</a> - <a href="https://vod.bingdou.wang/" target="_blank">云播</a> - <a href="https://music.bingdou.xyz/" target="_blank">音乐</a> - <a href="https://v.bingdou.xyz/" target="_blank">影院</a></p>
         <span class="cp">Copyright &copy; 2012-<script type="text/javascript">copyright=new Date();update=copyright.getFullYear();document.write(""+ update + "");</script> huangbin.net, All Rights Reserved.</span>
     </div>
 </footer>
