--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 			<input type="text" name="kw" class="s" value="" placeholder="搜天猫优惠券">
             <button type="submit" name="" class="btn">购物搜索</button>
           </form>
-		  <form class="search hidden" id="vod-search" action="https://www.nfstar.net/vodsearch/-------------/" method="get" target="_blank">
-			<input type="text" name="wd" class="s" value="" placeholder="搜电影、电视剧、综艺、动漫">
+		  <form class="search hidden" id="vod-search" action="https://vod.bingdou.xyz/" method="get" target="_blank">
+			<input type="text" name="url" class="s" value="" placeholder="搜电影、电视剧、综艺、动漫">
             <button type="submit" name="" class="btn">影视搜索</button>
           </form>
 		  <form class="search hidden" id="pan-search" name="form1" action="https://www.lingfengyun.com/search" method="get" target="_blank">
@@ -211,10 +211,10 @@
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="https://api.qianqi.net/go/?url=https://www.nfstar.net" target="_blank">
-  <img src="https://pic.imgdb.cn/item/5fe92f013ffa7d37b3269a41.png">
-  <h3>奈飞星影视</h3>
-  <p>有想法的在线影视网站</p>
+  <a href="https://api.qianqi.net/go/?url=https://www.dianyingim.com" target="_blank">
+  <img src="https://www.dianyingim.com/static/images/icon-72.png?2">
+  <h3>电影先生</h3>
+  <p>全网影片聚合平台</p>
   </a>
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
