--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 			<input type="text" name="kw" class="s" value="" placeholder="搜天猫优惠券">
             <button type="submit" name="" class="btn">购物搜索</button>
           </form>
-		  <form class="search hidden" id="vod-search" action="https://vod.bingdou.xyz/" method="get" target="_blank">
-			<input type="text" name="url" class="s" value="" placeholder="搜电影、电视剧、综艺、动漫">
+		  <form class="search hidden" id="vod-search" action="https://v.bingdou.xyz/search/" method="get" target="_blank">
+			<input type="text" name="wd" class="s" value="" placeholder="搜电影、电视剧、综艺、动漫">
             <button type="submit" name="" class="btn">影视搜索</button>
           </form>
 		  <form class="search hidden" id="pan-search" name="form1" action="https://www.lingfengyun.com/search" method="get" target="_blank">
