--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <input type="text" name="query" class="s" value="" placeholder="搜微信公众号文章">
             <button type="submit" name="" class="btn">微信搜索</button>
           </form>
-          <form class="search hidden" id="shop-search" action="https://tao.qianqi.net/index.php" method="get" target="_blank">
+          <form class="search hidden" id="shop-search" action="https://tao.bingdou.com.cn/index.php" method="get" target="_blank">
             <input type="hidden" name="r" value="l">
 			<input type="text" name="kw" class="s" value="" placeholder="搜天猫优惠券">
             <button type="submit" name="" class="btn">购物搜索</button>
@@ -59,7 +59,7 @@
             <button type="submit" name="" class="btn">影视搜索</button>
           </form>
 		  <form class="search hidden" id="pan-search" name="form1" action="https://www.lingfengyun.com/search" method="get" target="_blank">
-			<input type="hidden" name="so_token" value="33006bea8832bad7b9e48f37e0f04cb2" />
+			<input type="hidden" name="so_token" value="02082793dce4b2b487f54f4fa97ce455" />
                         <input type="hidden" name="so_file" value="wang_pan" />
 				        <input type="hidden" name="so_source" value="all_pan" />
 			<input type="text" name="wd" class="s" value="" placeholder="免费网盘资源搜索">
@@ -84,7 +84,7 @@
     </div>
     <div class="bar-right ">
       <span>特别推荐：</span>
-      <a href="https://tao.qianqi.net/" target="_blank"><i><img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/tmall.png" alt="天猫优惠券"></i>天猫优惠券</a>
+      <a href="https://tao.bingdou.com.cn/" target="_blank"><i><img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/tmall.png" alt="天猫优惠券"></i>天猫优惠券</a>
       <a href="https://v.bingdou.wang/" target="_blank"><i><img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/beauty.png" alt="美女秀场"></i>美女秀场</a>    </div>
   </div>
 </div>
@@ -107,7 +107,7 @@
 <a class="hide" href="http://movie.mtime.com/all/list/" target="_blank">时光电影热门</a>
 <a class="hide" href="https://www.bilibili.com/ranking?spm_id_from=333.334.banner_link.1" target="_blank">B站热门排行</a>
 	</div>
-    <div class="link "><a class="" href="https://tao.qianqi.net/" target="_blank"><i class="icon-fire"></i> 冰豆精选 - 领券购物更省钱！</a></div>
+    <div class="link "><a class="" href="https://tao.bingdou.com.cn/" target="_blank"><i class="icon-fire"></i> 冰豆精选 - 领券购物更省钱！</a></div>
   </div>
 </div>
 <div class="content">
@@ -607,7 +607,7 @@
   </div></div></div></div><div class="part" id="design" data-title="在线购物"><h2 class=""><strong>在线购物</strong></h2><div class="items "><div class="row">
   <div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="https://tao.qianqi.net" target="_blank">
+  <a href="https://tao.bingdou.com.cn" target="_blank">
   <img src="https://sr.ffquan.cn/cms_pic/20200111/bocj2eaulrge3c56u0dg0.ico">
   <h3>购物优惠券</h3>
   <p>每天实时更新千款天猫优惠券，纯人工筛选验货，限时限量特卖</p>
