--- a/index.html
+++ b/index.html
@@ -1915,7 +1915,7 @@
 <div class="footer-copyright ">
   <div class="container">
     <p>本网站设计及数据均受版权保护，任何公司及个人不得以任何方式复制，违者将依法追究责任，特此声明。</p>
-	<p><span><a href="https://www.bingdou.com.cn/about/">关于我们</a></span> <span><a href="https://www.bingdou.com.cn/about/contact.html">联系我们</a></span> <span><a href="https://www.bingdou.com.cn/about/links.html">友情链接</a></span> <span><a href="https://www.bingdou.com.cn/about/map.html">网站地图</a></span></p>
+	<p><span><a href="https://www.huangbin.net/" target="_blank">关于我们</a></span> <span><a href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=jLu7urW6vbW1zP39ou-j4Q" target="_blank">联系我们</a></span> <span><a href="https://wpa.qq.com/msgrd?v=3&uin=77696199&site=qq&menu=yes" target="_blank">友情链接</a></span> <span><a href="https://shang.qq.com/wpa/qunwpa?idkey=939aaf16e2a39906c9108cc7b4ab5bf3d2ebf8f16b2429e0cd461cd10e5b3384" target="_blank">QQ群</a></span></p>
     <p>Copyright &copy; 2012-<script type="text/javascript">copyright=new Date();update=copyright.getFullYear();document.write(""+ update + "");</script> huangbin.net, All Rights Reserved.</p>
   </div>
   </div>
