--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<input type="text" name="wd" class="s" value="" placeholder="搜网页">
             <button type="submit" name="" class="btn">网页搜索</button>
           </form>
-          <form class="search hidden" id="music-search" action="https://music.bingdou.xyz/?type=netease" method="get" target="_blank">
+          <form class="search hidden" id="music-search" action="http://www.musictool.top/" method="get" target="_blank">
 			<input type="hidden" name="type" value="netease">
 			<input type="text" name="name" class="s" value="" placeholder="音乐搜索下载">
             <button type="submit" name="" class="btn">音乐搜索</button>
