--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="header ">
   <div class="container">
     <h1 class="logo">
-      <strong><a href="https://www.3600.win" title="3600网址导航 - 安全实用的网址导航"><img src="images/logo.png" alt="3600网址导航"></a></strong>
+      <strong><a href="https://www.3600.win" title="3600网址导航 - 安全实用的网址导航"><img src="https://gcore.jsdelivr.net/gh/yellowside/3600/images/logo.png" alt="3600网址导航"></a></strong>
     </h1>
     <div class="primary-menus">
       <ul class="selects">
