--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="3600网址导航,网址导航,3600导航,工作导航,网站大全">
 <meta name="description" content="3600网址导航是一个安全实用的网址导航，收录了工作、社交、生活、音乐、购物等领域的优质网站，为广大用户提供高效率的上网导航服务。">
 <link rel="stylesheet" href="https://gcore.jsdelivr.net/gh/yellowside/3600/css/style.css" />
-<link href="https://gcore.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <link href="https://gcore.jsdelivr.net/gh/yellowside/3600/images/favicon.png" rel="shortcut icon" />
 </head>
 <body class="body-home body-website">
@@ -2044,7 +2044,7 @@
 	</a>
 	<div id="back-top"><a href="#" alt="返回顶部"><span><i class="fa fa-arrow-up fa-lg"></i></span></a></div>
 </div>
-<script src="https://lib.baomitu.com/jquery/1.12.4/jquery.js" charset="utf-8"></script>
+<script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/jquery/1.12.4/jquery.js" charset="utf-8"></script>
 <script src="https://gcore.jsdelivr.net/gh/yellowside/3600/js/js.js" charset="utf-8"></script>
 <!--<link rel="stylesheet" href="https://gcore.jsdelivr.net/gh/yellowside/3600/css/xuanfu.css" type="text/css" media="all">
 <div class="tmall_tab">
