--- a/index.html
+++ b/index.html
@@ -271,6 +271,14 @@
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
+  <a href="https://www.jurenm.com/" target="_blank">
+  <img src="https://www.jurenm.com/template/mytheme/statics/image/20220728/5321c3fc9.png">
+  <h3>巨人影院</h3>
+  <p>每天第一时间更新热播电影</p>
+  </a>
+  </div>
+  </div><div class="col-xs-6 col-sm-4 col-md-2">
+  <div class="item">
   <a href="https://www.xifanys.com/" target="_blank">
   <img src="https://www.xifanys.com/upload/mxcms/20220515-1/7a48976a0302fc29e1f3db46371ea785.png">
   <h3>稀饭影视</h3>
