--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://123456.li/" target="_blank">
-  <img src="https://123456.li/favicon.ico">
+  <img src="https://gcore.jsdelivr.net/gh/yellowside/3600/images/e.png">
   <h3>核桃影院Max</h3>
   <p>全网影片在线聚合平台</p>
   </a>
