--- a/index.html
+++ b/index.html
@@ -2369,7 +2369,7 @@
 			</div>
 		</div>
 	</a>
-	<div id="back-top"><a href="#" alt="返回顶部"><span><i class="fa fa-arrow-up fa-lg"></i></span></a></div>
+	<div id="back-top"><a href="javascript:scroll(0,0)" alt="返回顶部"><span><i class="fa fa-arrow-up fa-lg"></i></span></a></div>
 </div>
 <script src="https://cdn.bingdou.cc/3600/js/js.js" charset="utf-8"></script>
 <script>
