--- a/index.html
+++ b/index.html
@@ -2338,9 +2338,9 @@
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="http://www.hrxjbank.com.cn" target="_blank">
-  <img src="https://github.bingdou.cc/gh/yellowside/3600/ico/hrxjbank.ico">
-  <h3>华融湘江银行</h3>
+  <a href="https://www.hunan-bank.com/" target="_blank">
+  <img src="https://www.hunan-bank.com/images/logo.ico">
+  <h3>湖南银行</h3>
   <p>国有股份制商业银行</p>
   </a>
   </div>
