--- a/index.html
+++ b/index.html
@@ -598,14 +598,14 @@
   <a href="http://dyxs15.com/" target="_blank">
   <img src="https://dyxs15.com/statics/logo.png">
   <h3>电影先生</h3>
-  <p>聚合全网高清影视在线观看</p>
+  <p>免费在线播放影视剧集</p>
   </a>
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="https://www.skrtv.com/" target="_blank">
-  <img src="https://www.skrtv.com/assets/i/favicon.png">
-  <h3>鲨鱼TV</h3>
+  <a href="https://www.68yy.com/" target="_blank">
+  <img src="https://www.68yy.com/favicon.ico">
+  <h3>68影院</h3>
   <p>一家视频聚合类网站</p>
   </a>
   </div>
