--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 		<li><a href="https://v.bingdou.xyz/" target="_blank">影院</a></li>
 		<li><a href="https://music.bingdou.xyz/" target="_blank">音乐</a></li>
 		<li><a href="https://www.bingdou.vip/" target="_blank">云播</a></li>
-		<li><a href="https://www.bingdou.wang/" target="_blank">直播</a></li>
+		<li><a href="http://www.bingdou.wang/" target="_blank">直播</a></li>
 	 </ul>
     </div>
     <div class="bar-right ">
@@ -1014,7 +1014,7 @@
   <div class="part" id="jiaocheng" data-title="在线直播"><h2 class=""><strong>在线直播</strong></h2><div class="items "><div class="row">
   <div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="https://www.bingdou.wang" target="_blank">
+  <a href="http://www.bingdou.wang" target="_blank">
   <img src="https://github.bingdou.cc/gh/yellowside/3600/ico/bingdoutv.ico">
   <h3>冰豆直播</h3>
   <p>网民喜爱的免费电视直播网</p>
